Fix contrast issue

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -429,7 +429,7 @@ a.card__link:hover {
 .bookmark__meta {
   margin: -0.5rem 0 1rem;
   font-size: 1.6rem;
-  color: #c33f34;
+  color: #b93c31;
   font-weight: bold;
 }
 
